workspace-sf/force-app/main/default/objects/ContratanteContrato__c/ContratanteContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar o cadastro dos contratantes do contrato</description>
    <label>Contratante do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratantes do contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>