workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Carga_DataStage__c.field-meta.xml
<CustomField>
    <fullName>Carga_DataStage__c</fullName>
    <description>Campo responsável por armazenar os status do processo que roda o faturamento da renner.</description>
    <label>Carga DataStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>