workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/CEPCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>CEPCorrespondencia__c</fullName>
    <label>CEP de correspondência</label>
    <length>9</length>
    <type>Text</type>
</CustomField>