workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Comercial__c.field-meta.xml
<CustomField>
    <fullName>Comercial__c</fullName>
    <label>Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Veraneio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>