workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>