workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/ComplementoCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>ComplementoCorrespondencia__c</fullName>
    <label>Complemento de correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>