workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratantes do contrato</relationshipLabel>
    <relationshipName>ContratantesContrato</relationshipName>
    <type>Lookup</type>
</CustomField>