workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/CpfCnpj__c.field-meta.xml
<CustomField>
    <fullName>CpfCnpj__c</fullName>
    <label>Cpf /Cnpj</label>
    <length>30</length>
    <type>Text</type>
</CustomField>