workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/DiasPagamento__c.field-meta.xml
<CustomField>
    <fullName>DiasPagamento__c</fullName>
    <label>Dias para pagamento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>