workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/FormaInfoCartao__c.field-meta.xml
<CustomField>
    <fullName>FormaInfoCartao__c</fullName>
    <label>Forma de preenchimento do cartão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preencher agora</fullName>
            </value>
            <value>
                <fullName>Enviar por e-mail</fullName>
            </value>
            <value>
                <fullName>Enviar por SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>