workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/FormaReceberApolice__c.field-meta.xml
<CustomField>
    <fullName>FormaReceberApolice__c</fullName>
    <label>Forma de Receber a apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>