workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/IOF__c.field-meta.xml
<CustomField>
    <fullName>IOF__c</fullName>
    <label>IOF R$</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>