workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/NomeContratante__c.field-meta.xml
<CustomField>
    <fullName>NomeContratante__c</fullName>
    <label>Nome do contratante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>