workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/NumeroCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>NumeroCorrespondencia__c</fullName>
    <label>Número de correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>