workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>