workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/PaisCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>PaisCorrespondencia__c</fullName>
    <label>País de correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>