workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/PlanoParcelamento__c.field-meta.xml
<CustomField>
    <fullName>PlanoParcelamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano de parcelamento</label>
    <referenceTo>PlanoParcelamento__c</referenceTo>
    <relationshipLabel>Contratantes do contrato</relationshipLabel>
    <relationshipName>ContratantesContrato</relationshipName>
    <type>Lookup</type>
</CustomField>