workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/Recorrencia__c.field-meta.xml
<CustomField>
    <fullName>Recorrencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorrencia</label>
    <type>Checkbox</type>
</CustomField>