workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/ResponsavelPagamento__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo pagamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratantes do contrato (Responsável pelo pagamento)</relationshipLabel>
    <relationshipName>ContratantesContratoDependente</relationshipName>
    <type>Lookup</type>
</CustomField>