workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/TelefoneOutro__c.field-meta.xml
<CustomField>
    <fullName>TelefoneOutro__c</fullName>
    <label>Telefone Outro</label>
    <type>Phone</type>
</CustomField>