workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/TipoEnderecoCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>TipoEnderecoCorrespondencia__c</fullName>
    <label>Tipo de endereço de correspondência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Veraneio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>