workspace-sf/force-app/main/default/objects/ContratanteContrato__c/fields/VencimentoPrimeiraParcela__c.field-meta.xml
<CustomField>
    <fullName>VencimentoPrimeiraParcela__c</fullName>
    <label>Vencimento da primeira parcela</label>
    <type>Date</type>
</CustomField>